[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "kammat"
version = "0.16.7"
authors = [
    {name = "Dmitrii Grishchuk", email = "leonefamily@seznam.cz"},
    {name = "Brno City Chief Architect's Office", email = "info@kambrno.cz"}
]
description = "A module to handle transformation of input data into MATSim format and process its outputs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "bezier >=2021.2.12",
    "lxml >=4.6.3",
    "matplotlib >=3.7.0",
    "momepy <0.6.0; python_version <'3.10'",
    "momepy >=0.8.0; python_version >='3.10'",
    "networkx ==2.6.3; python_version <'3.10'",
    "networkx >=2.8.0; python_version >='3.10'",
    "numpy <=1.23.5; python_version <'3.10'",
    "numpy >2.0.0; python_version >='3.10'",
    "pandas >=1.5.3",
    "Pillow >=9.0.0",
    "PySimpleGUI-4-foss <5.0.0",
    "scikit_learn >=1.0",
    "scipy >=1.0.0",
    "Shapely >=2.0.0",
    "protobuf <=3.20",
    "matsim-tools >=0.0.14",
    "dbfread >=2.0.0",
    "geopandas >=0.14.0"
]

[env]
BEZIER_INSTALL_PREFIX = "true"
BEZIER_NO_EXTENSION = "true"

[project.scripts]
kammat-gui = "kammat.gui.main:main"
kammat = "kammat.__main__:main"